save user email in shared preferences for display on log in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">DiscussionForum</string>
+    <string name="app_name">SnapTweet</string>
+    <string name="firebase_url">https://snaptweet.firebaseio.com</string>
+    <string name="preference_file_key">com.example.guest.discussionforum.PREFERENCE_FILE_KEY</string>
 </resources>
