--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">SnapTweet</string>
     <string name="firebase_url">https://snaptweet.firebaseio.com</string>
     <string name="preference_file_key">com.example.guest.discussionforum.PREFERENCE_FILE_KEY</string>
+    <string name="snap_true">Keeping It Snappy</string>
+    <string name="snap_false">Not So Snappy Pls</string>
 </resources>
